--- a/Disclosures.html
+++ b/Disclosures.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="Media/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script src="js/template-loader.js" defer></script>
+    <script src="js/mobile-menu.js" defer></script>
 </head>
 <body class="bg-black text-white disclosures-page">
     <a href="#main-content" class="skip-link">Skip to main content</a>
