--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="preload" as="image" href="Media/Hero.webp" type="image/webp">
     <link rel="stylesheet" href="styles.css">
     <script src="js/template-loader.js" defer></script>
+    <script src="js/mobile-menu.js" defer></script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
