--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
         <!-- Recent Posts Section -->
         <section class="mb-20">
             <h2 class="text-2xl font-bold mb-8">Recent Posts</h2>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Article Card 1 -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6" aria-label="Recent blog posts">
                 <a href="Posts/GenAi-Managed-Stocks-Portfolio-Week-5.html" class="group">
                     <div class="space-y-3">
                         <div class="relative h-48 rounded-lg overflow-hidden border border-gray-800 group-hover:border-purple-500/50 transition-colors">
@@ -90,7 +89,6 @@
                     </div>
                 </a>
 
-                <!-- Article Card 2 -->
                 <a href="Posts/GenAi-Managed-Stocks-Portfolio-Week-4.html" class="group">
                     <div class="space-y-3">
                         <div class="relative h-48 rounded-lg overflow-hidden border border-gray-800 group-hover:border-purple-500/50 transition-colors">
@@ -106,7 +104,6 @@
                     </div>
                 </a>
 
-                <!-- Article Card 3 -->
                 <a href="Posts/GenAi-Managed-Stocks-Portfolio-Week-3.html" class="group">
                     <div class="space-y-3">
                         <div class="relative h-48 rounded-lg overflow-hidden border border-gray-800 group-hover:border-purple-500/50 transition-colors">
@@ -122,7 +119,6 @@
                     </div>
                 </a>
 
-                <!-- Article Card 4 -->
                 <a href="Posts/GenAi-Managed-Stocks-Portfolio-Week-2.html" class="group">
                     <div class="space-y-3">
                         <div class="relative h-48 rounded-lg overflow-hidden border border-gray-800 group-hover:border-purple-500/50 transition-colors">
@@ -138,11 +134,9 @@
                     </div>
                 </a>
 
-                <!-- Article Card 5 (Week 1 Launch) -->
                 <a href="Posts/GenAi-Managed-Stocks-Portfolio-Week-1.html" class="group">
                     <div class="space-y-3">
                         <div class="relative h-48 rounded-lg overflow-hidden border border-gray-800 group-hover:border-purple-500/50 transition-colors">
-                            <!-- Hero image used as Week 1 placeholder (W1.webp not present) -->
                             <img src="Media/W1.webp" alt="Week 1 launch of AI-managed stock portfolio" class="w-full h-full object-cover" width="600" height="400" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 50vw, 33vw" loading="lazy" decoding="async">
                         </div>
                         <div>
@@ -154,8 +148,6 @@
                         </div>
                     </div>
                 </a>
-
-                                            
             </div>
         </section>
 
