--- a/tools.html
+++ b/tools.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-qi123' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; frame-src 'none'; base-uri 'self'; form-action 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-qi123'; style-src 'self' 'nonce-qi123'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; frame-src 'none'; base-uri 'self'; form-action 'self';">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://quantuminvestor.net/tools.html">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/template-loader.js" defer nonce="qi123"></script>
     <script src="js/mobile-menu.js" defer nonce="qi123"></script>
-    <style>
+    <style nonce="qi123">
         .pixabay-hero {
             position: relative;
             padding: 2.75rem 2.5rem;
@@ -96,10 +96,10 @@
         }
 
         .tool-card {
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
-            border: 2px solid rgba(102, 126, 234, 0.3);
-            border-radius: 20px;
-            padding: 40px;
+            background: linear-gradient(135deg, rgba(168, 85, 247, 0.1) 0%, rgba(59, 130, 246, 0.08) 100%);
+            border: 1px solid rgba(168, 85, 247, 0.3);
+            border-radius: 1rem;
+            padding: 2.5rem;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
             overflow: hidden;
@@ -112,7 +112,7 @@
             right: -50%;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(102, 126, 234, 0.15) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(168, 85, 247, 0.15) 0%, transparent 70%);
             transition: transform 0.6s ease;
             transform: scale(0);
         }
@@ -123,37 +123,37 @@
 
         .tool-card:hover {
             transform: translateY(-8px);
-            border-color: rgba(102, 126, 234, 0.6);
-            box-shadow: 0 20px 60px rgba(102, 126, 234, 0.3);
+            border-color: rgba(168, 85, 247, 0.6);
+            box-shadow: 0 20px 60px rgba(168, 85, 247, 0.3);
         }
 
         .tool-icon {
             width: 80px;
             height: 80px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 16px;
+            background: linear-gradient(135deg, var(--primary), rgba(168, 85, 247, 0.5));
+            border-radius: 1rem;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 2.5em;
-            margin-bottom: 25px;
-            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+            margin-bottom: 1.5rem;
+            box-shadow: 0 10px 30px rgba(168, 85, 247, 0.4);
             position: relative;
             z-index: 1;
         }
 
         .tool-card h2 {
             font-size: 2em;
-            margin-bottom: 15px;
-            color: #fff;
+            margin-bottom: 1rem;
+            color: var(--text-white);
             position: relative;
             z-index: 1;
         }
 
         .tool-card p {
-            color: rgba(255, 255, 255, 0.7);
+            color: var(--text-gray-400);
             line-height: 1.7;
-            margin-bottom: 30px;
+            margin-bottom: 2rem;
             font-size: 1.05em;
             position: relative;
             z-index: 1;
@@ -168,48 +168,28 @@
         }
 
         .tool-features li {
-            padding: 10px 0 10px 30px;
-            color: rgba(255, 255, 255, 0.8);
+            padding: 0.6rem 0 0.6rem 1.75rem;
+            color: var(--text-gray-400);
             position: relative;
             font-size: 0.95em;
         }
 
         .tool-features li::before {
-            content: '-';
+            content: '+';
             position: absolute;
             left: 0;
-            color: #4ade80;
+            color: var(--primary);
             font-weight: bold;
             font-size: 1.2em;
-        }
-
-        .tool-button {
-            display: inline-block;
-            padding: 15px 35px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 10px;
-            font-weight: 600;
-            font-size: 1.05em;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
-            position: relative;
-            z-index: 1;
-            pointer-events: none;
-        }
-
-        .tool-card-link:hover .tool-button {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 25px rgba(102, 126, 234, 0.6);
         }
 
         .security-badge {
             text-align: center;
             margin-top: 60px;
             padding: 30px;
-            background: rgba(102, 126, 234, 0.05);
-            border-radius: 12px;
+            background: rgba(168, 85, 247, 0.05);
+            border: 1px solid rgba(168, 85, 247, 0.15);
+            border-radius: 0.75rem;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
@@ -221,7 +201,7 @@
         }
 
         .security-badge p {
-            color: rgba(255, 255, 255, 0.6);
+            color: var(--text-gray-400);
             font-size: 0.9em;
         }
 
@@ -241,7 +221,7 @@
         }
     </style>
 </head>
-<body data-theme="default">
+<body class="bg-black text-white" data-theme="default">
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
     <!-- Header -->
@@ -253,7 +233,7 @@
             <div class="space-y-6">
                 <span class="pixabay-pill">Creative Tooling</span>
                 <h1 class="pixabay-title font-bold leading-tight">🛠️ Content Creation Tools</h1>
-                <p class="pixabay-hero-copy text-gray-400">
+                <p class="pixabay-hero-copy" style="color: var(--text-gray-400);">
                     Professional tools for generating hero images and social media cards
                 </p>
             </div>
@@ -287,7 +267,7 @@
                     <p>Create stunning social media preview cards (Open Graph/Twitter Cards) for your blog posts. Perfect for sharing on social platforms.</p>
                     
                     <ul class="tool-features">
-                        <li>Generate OG & Twitter Cards</li>
+                        <li>Generate LinkedIn & X.COM Cards</li>
                         <li>Custom text & styling</li>
                         <li>Optimized dimensions (1200x630)</li>
                         <li>Brand-consistent design</li>
