updated heatmap link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         Exploring the Frontiers of <span class="text-purple-500">Generative AI and the Stock Market</span>
                     </h1>
                     <p class="text-lg md:text-xl text-gray-400-static">
-                        Insights into whether GenAI can outthink Wall Street for everyday investors.
+                        Watch a $10,000 real-money stock portfolio managed by generative AI, striving to outperform the market every day.
                     </p>
                 </div>
                 <div class="relative h-96 rounded-xl overflow-hidden border border-gray-800">
