--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
                     <h1 class="text-4xl md:text-6xl font-bold leading-tight">
                         Exploring the Frontiers of <span class="text-purple-500">Generative AI and the Stock Market</span>
                     </h1>
-                    <p class="text-lg md:text-xl text-gray-400-static">
+                 <!--   <p class="text-lg md:text-xl text-gray-400-static">
                         Watch a $10,000 real-money stock portfolio managed by generative AI, striving to outperform the market every day.
-                    </p>
+                    </p> -->
+                    <div data-template="subscribe-form" data-root-path=""></div>
                 </div>
                 <div class="relative h-96 rounded-xl overflow-hidden border border-gray-800">
                     <img src="Media/Hero.webp" alt="AI visualization showing a robot trading stocks" width="1200" height="800" class="w-full h-full object-cover" loading="eager" fetchpriority="high" decoding="async">
